--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-chartist": "0.13.3",
     "react-dom": "16.9.0",
     "react-google-maps": "9.4.5",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.1.0",
     "react-swipeable-views": "0.13.3"
