--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "16.9.0",
     "react-google-maps": "9.4.5",
     "react-lottie": "^1.2.3",
+    "react-powerbi": "^0.6.0",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.1.0",
     "react-swipeable-views": "0.13.3"
