--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "dependencies": {
     "@date-io/moment": "^1.3.9",
-    "@material-ui/core": "4.3.2",
-    "@material-ui/icons": "4.2.1",
+    "@material-ui/core": "4.9.13",
+    "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.52",
     "@material-ui/pickers": "^3.2.10",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
