--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.13.1",
     "history": "4.9.0",
     "izitoast": "^1.4.0",
+    "lodash": "^4.17.20",
     "moment": "^2.24.0",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.7.2",
